--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name" : "custom-post-order",
-    "description" : "Custom Posts Order",
-    "version" : "1.0.1",
+    "name" : "mpat-cpo",
+    "description" : "NPAT Custom Posts Order",
+    "version" : "1.1.1",
     "license" : "GPL2",
     "authors" : [{
         "name" : "Jean-Philippe Ruijs",
